--- a/index.html
+++ b/index.html
@@ -19,7 +19,35 @@
 	</style>
 </head>
 <body>
-
+<div class="navbar">
+	<div class="navbar-inner">
+    	<div class="container">
+	
+			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			</a>
+			
+    	    <a class="brand" href="#">
+		    	Story Creator
+		    </a>
+			<div class="nav-collapse">	
+				<ul class="nav">
+			    	<li>
+				    	<a href="./">Home</a>
+				    </li>
+				    <li>
+						<a href="./#stories/list">List</a>
+					</li>
+				    <li>
+						<a href="./#stories/new">Create</a>
+					</li>
+			    </ul>
+			</div>
+    	</div>
+   	</div>
+</div>
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div id="sidebar" class="span2">
